# immunity-agent

./: .gitignore  AGENTS.md  AGENT_INTEGRATIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  PYPI.md  README.md  SKILL.md  benchmark.md  immunity  immunity-agent.pth  implementation.md  package.json  prismor  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: threat-intel.yml
.github/workflows/: poll-nvd-intel.yml  process-community-intel.yml  release.yml
.next/: trace  trace-build
advisories/: immunity-feed.json  immunity-feed.json.sig
docs/: architecture.md  canary.md  cli-reference.md  dashboard.md  docker.md  hermes.md  iam.md  learning.md  live-telemetry.md  network-isolation.md  policy-layers-and-exemptions.md  scoped-agent.md  semantic-guard.md  skill-scanner.md  supply-chain.md  sweep-and-cloak.md  using-cloak.md  warden.md
docs/issues-fix/: scoped-agent-blocks-implementation.md
keys/: public.pub
packaging/immunity-agent-shim/: LICENSE  README.md  pyproject.toml
packaging/immunity-agent-shim/immunity_agent/: __init__.py
pipeline/: fetch_nvd_intel.py  merge_intel.py
schemas/: threat-object.schema.json
scripts/: fetch_nvd_intel.py  immunity  init.sh  install.sh  merge_intel.py  prismor  query.sh  query_feed.sh  setup.py  sign_feed.sh  sweep.sh  upgrade_feed.py  verify_feed.sh  warden
skills/: security.md
skills/behavioral-security/: SKILL.md  skill.json
skills/code-security/: SKILL.md  skill.json
skills/code-security/rules/: authentication-jwt.md  code-injection.md  command-injection.md  csrf.md  docker.md  github-actions.md  insecure-crypto.md  insecure-deserialization.md  insecure-transport.md  kubernetes.md  memory-safety.md  path-traversal.md  prototype-pollution.md  secrets.md  sql-injection.md  ssrf.md  terraform-aws.md  terraform-azure.md  terraform-gcp.md  unsafe-functions.md  xss.md  xxe.md
skills/llm-security/: SKILL.md  skill.json
skills/llm-security/rules/: data-poisoning.md  excessive-agency.md  misinformation.md  output-handling.md  prompt-injection.md  sensitive-disclosure.md  supply-chain.md  system-prompt-leakage.md  unbounded-consumption.md  vector-embedding.md
skills/prismor-feed/: SKILL.md  skill.json
skills/static-analysis/: SKILL.md  skill.json
supplychain/: __init__.py  cli.py  hardener.py  ioc.py  version_range.py
supplychain/ecosystems/: detector.py  metadata.py
supplychain/scoring/: engine.py  nvd_lookup.py  osv_lookup.py  safe_version.py  typosquat.py
templates/: .cursorrules.template  CLAUDE.md.template  policy-tests-owasp.yaml
tests/: test_cli.py  test_cloak_secret_guard.py  test_db_migration.py  test_deps_semver.py  test_detection_improvements.py  test_enforcement_floor.py  test_enterprise_hardening.py  test_enterprise_telemetry.py  test_exemptions.py  test_heartbeat.py  test_hooks.py  test_hooks_extended.py  test_iam.py  test_lockfile_integrity.py  test_mcp_security.py  test_pattern_customization.py  test_pipeline.py  test_policies.py  test_policy_engine.py  test_remote_policy.py  test_scanner_codex.py  test_semantic_guard.py  test_staged_execution.py  test_supply_chain.py  test_telemetry_title_redaction.py  test_workspace_scope.py
warden/: README.md  __init__.py  _post_install.py  audit.py  canary.py  cli.py  dashboard.html  default_policy.yaml  deps.py  feed.py  hooks.py  iam.py  immunity_cli.py  learning.py  paths.py  policies.py  policy_engine.py  policy_schema.json  policy_test.py  sanitizer.py  scanner.py  scoped_agent.py  semantic_guard.py  semantic_guard_v2.py  server.py  setup_wizard.py  sinks.py  store.py  sweep-gitleaks.toml  sweep.py
warden/cloaking/: README.md  __init__.py  builtin_patterns.txt  hermes_installer.py  hermes_plugin_entry.py  installer.py  patterns.py  secrets_store.py
warden/cloaking/hermes-plugin/: __init__.py  hermes_plugin_entry.py  plugin.yaml
warden/cloaking/hooks/: _patterns.sh  decloak.sh  recloak-mcp.sh  secret-guard.sh  sweep-on-stop.sh  userprompt-guard.sh
warden/enterprise/: __init__.py  heartbeat.py  identity.py  remote_policy.py  telemetry.py  telemetry_spool.py  workspace_scope.py
warden/examples/: sample-session.jsonl
warden/tokenization/: README.md  __init__.py  installer.py  secrets_store.py
warden/tokenization/hooks/: detokenize.sh  retokenize-mcp.sh  sweep-on-stop.sh  userprompt-guard.sh
