[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immunity-agent"
dynamic = ["version"]
description = "Runtime security for AI coding agents: policy enforcement, secret prevention, and supply-chain blocking."
readme = "PYPI.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Prismor Security", email = "hello@prismor.dev" }]
keywords = [
    "security",
    "ai-agents",
    "llm",
    "prompt-injection",
    "supply-chain",
    "claude-code",
    "policy-enforcement",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["build", "pytest"]

[project.urls]
Homepage = "https://prismor.dev"
Repository = "https://github.com/PrismorSec/immunity-agent"
Documentation = "https://docs.prismor.dev"

[project.scripts]
immunity = "warden.immunity_cli:main"
warden = "warden.immunity_cli:_warden_shim"

# Hermes Agent plugin auto-discovery entry point
[project.entry-points."hermes_agent.plugins"]
prismor-warden-cloak = "warden.cloaking.hermes_plugin_entry:register"

[tool.hatch.version]
path = "warden/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["warden", "supplychain"]

# Bundle runtime data into the wheel under warden/data/
[tool.hatch.build.targets.wheel.force-include]
"immunity-agent.pth" = "immunity-agent.pth"
"advisories/immunity-feed.json" = "warden/data/advisories/immunity-feed.json"
"advisories/immunity-feed.json.sig" = "warden/data/advisories/immunity-feed.json.sig"
"keys/public.pub" = "warden/data/keys/public.pub"
"templates/policy-tests-owasp.yaml" = "warden/data/templates/policy-tests-owasp.yaml"
"templates/CLAUDE.md.template" = "warden/data/templates/CLAUDE.md.template"
"warden/cloaking/hermes-plugin/plugin.yaml" = "warden/data/cloaking/hermes-plugin/plugin.yaml"
"warden/cloaking/hermes-plugin/__init__.py" = "warden/data/cloaking/hermes-plugin/__init__.py"
# Bundle the immunity-agent Claude skill (SKILL.md + its docs/, minus the heavy
# unreferenced demo.gif) so `immunity setup` can install it into a workspace's
# .claude/skills/ directory. Files are listed explicitly — a `docs/` directory
# mapping would drag in demo.gif (force-include ignores wheel `exclude`).
"SKILL.md" = "warden/data/SKILL.md"
"docs/architecture.md" = "warden/data/docs/architecture.md"
"docs/canary.md" = "warden/data/docs/canary.md"
"docs/cli-reference.md" = "warden/data/docs/cli-reference.md"
"docs/dashboard.md" = "warden/data/docs/dashboard.md"
"docs/docker.md" = "warden/data/docs/docker.md"
"docs/hermes.md" = "warden/data/docs/hermes.md"
"docs/iam.md" = "warden/data/docs/iam.md"
"docs/learning.md" = "warden/data/docs/learning.md"
"docs/live-telemetry.md" = "warden/data/docs/live-telemetry.md"
"docs/network-isolation.md" = "warden/data/docs/network-isolation.md"
"docs/policy-layers-and-exemptions.md" = "warden/data/docs/policy-layers-and-exemptions.md"
"docs/scoped-agent.md" = "warden/data/docs/scoped-agent.md"
"docs/semantic-guard.md" = "warden/data/docs/semantic-guard.md"
"docs/skill-scanner.md" = "warden/data/docs/skill-scanner.md"
"docs/supply-chain.md" = "warden/data/docs/supply-chain.md"
"docs/sweep-and-cloak.md" = "warden/data/docs/sweep-and-cloak.md"
"docs/warden.md" = "warden/data/docs/warden.md"

[tool.hatch.build.targets.sdist]
include = [
    "warden/",
    "supplychain/",
    "immunity-agent.pth",
    "advisories/immunity-feed.json",
    "advisories/immunity-feed.json.sig",
    "keys/public.pub",
    "templates/",
    "PYPI.md",
    "LICENSE",
]
