[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Redirect package: `immunity-agent` has been renamed to `prismor`.
# This distribution carries no runtime code — it only depends on `prismor`
# so that `pip install immunity-agent` pulls in the real package (and its
# `prismor` / `immunity` console scripts). Keep the version in lock-step with
# `warden/__init__.py` on every release.
[project]
name = "immunity-agent"
version = "1.13.0"
description = "Deprecated — renamed to 'prismor'. Installs prismor for you. Run: pip install prismor"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Prismor Security", email = "hello@prismor.dev" }]
keywords = ["security", "ai-agents", "deprecated", "prismor"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "prismor>=1.13.0",
]

[project.urls]
Homepage = "https://prismor.dev"
Repository = "https://github.com/PrismorSec/prismor"

[tool.hatch.build.targets.wheel]
packages = ["immunity_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "immunity_agent/",
    "README.md",
    "LICENSE",
]
